--- a/frontend/src/components/ExplorMenu/ExplorMenu.css
+++ b/frontend/src/components/ExplorMenu/ExplorMenu.css
@@ -54,3 +54,10 @@
     border: 4px solid tomato;
     padding: 2px;
 }
+
+@media (max-width:1050px) {
+    .explor-menu-text{
+        max-width: 100%;
+        font-size: 18px;
+    }
+}
