--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -3,13 +3,14 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    
 }
 
 .navbar .logo{
     width: 150px;
 }
 
-.navbar .navabar-menu{
+.navbar .navbar-menu{
     display: flex;
     list-style: none;
     gap: 30px;
@@ -60,4 +61,134 @@
     background-color: tomato;
     top: -8px;
     right: -8px;
+}
+
+
+
+/* @media (max-width:1070px) {
+    .navbar .logo{
+        width: 120px;
+    }
+
+    .navbar .navbar-menu{
+        font-size: 17px;
+    }
+    .navbar-right img{
+        width: 21px;
+    }
+
+    .navbar-right button{
+        font-size: 17px;
+        padding: 8px 25px;
+
+    }
+
+
+    
+}
+
+@media (max-width:1200px) {
+    .navbar-right img{
+        width: 22px;
+    }
+    .navbar-menu{
+        font-size: 18px;
+       
+    }
+}
+
+
+@media (max-width:950px) {
+
+    .navbar .navbar-menu{
+        display:none;
+        background-color: red;
+    }
+    
+}
+
+@media (max-width:430){
+    .navbar .navbar-right img{
+        width: 10px;
+    }
+} */
+
+
+
+@media (max-width:1050px) {
+    .navbar .logo{
+        width: 140px;
+    }
+
+    .navbar-menu{
+        gap:20px;
+        font-size: 17px;
+
+    }
+    .navbar-right{
+        gap: 20px;
+
+    }
+    .navbar-right img{
+        width: 22px;
+    }
+    .navbar-right button{
+        padding: 8px 25px   ;
+    }
+}
+
+@media (max-width:1000px) {
+    .navbar .navbar-menu{
+        display: none;
+    }
+}
+
+
+
+@media (max-width:900px) {
+    .navbar .logo{
+        width: 120px;
+    }
+
+    .navbar-menu{
+        gap:15px;
+        font-size: 16px;
+
+    }
+    .navbar-right{
+        gap: 20px;
+
+    }
+    .navbar-right img{
+        width: 20px;
+    }
+    .navbar-right button{
+        padding: 7px 20px   ;
+        font-size: 15px;
+    }
+}
+
+
+
+@media (max-width:750px) {
+    
+    .navbar .navbar-menu{
+        
+        display: none;
+    }
+    .navbar .navbar-right{
+        gap:10px
+    }
+
+    .navbar .logo{
+        width: 100px;
+    }
+    .navbar-right img{
+        width: 17px;
+        margin: 0px 4px;
+    }
+    .navbar-search-icon .dot{
+        top: -5px;
+        right: -4px;
+    }
 }
